[project]
name = "repl"
version = "0.1.0"
description = "Python REPL for Claude"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.2",
    "pandas>=2.2.0",
    "pyarrow>=14.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
repl = "repl:main"
